dataset1235/2025-2/1153765216/users/2719941446/executions/2747719322_3902794658.log
== RUN (2025-08-21 19:15:50)
-- CODE: 
nome(Larissa)
idade(23)
altura(1.68)

print(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:24:27)
-- CODE: 
Nome =(input("Insira seu nome: "))
Idade =(input("Insira sua idade: "))
Altura =(input("Insira sua altura:" ))

print("Nome:", Nome)
print("Idade:", Idade)
print("Altura:", Altura)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura: 1.89
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:21:24)
-- CODE: 
Nome =(input("Insira seu nome: "))
Idade=(input("Insira sua idade: "))
Altura=(input("Insira sua altura" ))

print()
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Insira seu nome: Insira sua idade: Insira sua altura
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Insira seu nome: Insira sua idade: Insira sua altura
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Insira seu nome: Insira sua idade: Insira sua altura
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Insira seu nome: Insira sua idade: Insira sua altura
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:15:39)
-- CODE: 
nome(Larissa)
idade(23)
altura(1.68)

ptin(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:20:51)
-- CODE: 
Nome=(input("Insira seu nome:"))
Idade=(input("Insira sua idade:"))
Altura=(input("Insira sua altura"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Insira seu nome:Insira sua idade:Insira sua altura
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Insira seu nome:Insira sua idade:Insira sua altura
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Insira seu nome:Insira sua idade:Insira sua altura
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Insira seu nome:Insira sua idade:Insira sua altura
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:16:19)
-- CODE: 
nome(Larissa)
idade(23)
altura(1.68)

  print(nome)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
File "XXXX", line 5
    print(nome)
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
File "XXXX", line 5
    print(nome)
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
File "XXXX", line 5
    print(nome)
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
File "XXXX", line 5
    print(nome)
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:21:40)
-- CODE: 
Nome =(input("Insira seu nome: "))
Idade =(input("Insira sua idade: "))
Altura =(input("Insira sua altura" ))

print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Insira seu nome: Insira sua idade: Insira sua altura
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Insira seu nome: Insira sua idade: Insira sua altura
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Insira seu nome: Insira sua idade: Insira sua altura
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Insira seu nome: Insira sua idade: Insira sua altura
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:20:14)
-- CODE: 
Nome=(input("Insira seu nome:"))
Idade=(input("Insira sua idade:"))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Insira seu nome:Insira sua idade:
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Insira seu nome:Insira sua idade:
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Insira seu nome:Insira sua idade:
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Insira seu nome:Insira sua idade:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:23:56)
-- CODE: 
Nome =(input("Insira seu nome: "))
Idade =(input("Insira sua idade: "))
Altura =(input("Insira sua altura" ))

print("Nome:", Nome)
print("Idade:", Idade)
print("Altura:", Altura")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
File "XXXX", line 7
    print("Altura:", Altura")
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
File "XXXX", line 7
    print("Altura:", Altura")
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
File "XXXX", line 7
    print("Altura:", Altura")
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
File "XXXX", line 7
    print("Altura:", Altura")
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:24:05)
-- CODE: 
Nome =(input("Insira seu nome: "))
Idade =(input("Insira sua idade: "))
Altura =(input("Insira sua altura" ))

print("Nome:", Nome)
print("Idade:", Idade)
print("Altura:", Altura)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura: 1.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:21:37)
-- CODE: 
Nome =(input("Insira seu nome: "))
Idade =(input("Insira sua idade: "))
Altura =(input("Insira sua altura" ))

print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Insira seu nome: Insira sua idade: Insira sua altura
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Insira seu nome: Insira sua idade: Insira sua altura
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Insira seu nome: Insira sua idade: Insira sua altura
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Insira seu nome: Insira sua idade: Insira sua altura
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:23:53)
-- CODE: 
Nome =(input("Insira seu nome: "))
Idade =(input("Insira sua idade: "))
Altura =(input("Insira sua altura" ))

print("Nome:", Nome)
print("Idade:", Idade)
print("Altura:", Altura")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
File "XXXX", line 7
    print("Altura:", Altura")
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
File "XXXX", line 7
    print("Altura:", Altura")
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
File "XXXX", line 7
    print("Altura:", Altura")
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
File "XXXX", line 7
    print("Altura:", Altura")
                           ^
SyntaxError: unterminated string literal (detected at line 7)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:16:28)
-- CODE: 
nome(Larissa)
idade(23)
altura(1.68)
print(nome)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:16:31)
-- CODE: 
nome(Larissa)
idade(23)
altura(1.68)
print(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:15:48)
-- CODE: 
nome(Larissa)
idade(23)
altura(1.68)

print(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:21:27)
-- CODE: 
Nome =(input("Insira seu nome: "))
Idade=(input("Insira sua idade: "))
Altura=(input("Insira sua altura" ))

print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Insira seu nome: Insira sua idade: Insira sua altura
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Insira seu nome: Insira sua idade: Insira sua altura
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Insira seu nome: Insira sua idade: Insira sua altura
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Insira seu nome: Insira sua idade: Insira sua altura
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:20:18)
-- CODE: 
Nome=(input("Insira seu nome:"))
Idade=(input("Insira sua idade:"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Insira seu nome:Insira sua idade:
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Insira seu nome:Insira sua idade:
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Insira seu nome:Insira sua idade:
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Insira seu nome:Insira sua idade:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:15:49)
-- CODE: 
nome(Larissa)
idade(23)
altura(1.68)

print(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:16:31)
-- CODE: 
nome(Larissa)
idade(23)
altura(1.68)
print(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome(Larissa)
    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:23:56)
-- CODE: 
Nome =(input("Insira seu nome: "))
Idade =(input("Insira sua idade: "))
Altura =(input("Insira sua altura" ))

print("Nome:", Nome)
print("Idade:", Idade)
print("Altura:", Altura")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
File "XXXX", line 7
    print("Altura:", Altura")
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
File "XXXX", line 7
    print("Altura:", Altura")
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
File "XXXX", line 7
    print("Altura:", Altura")
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
File "XXXX", line 7
    print("Altura:", Altura")
                           ^
SyntaxError: unterminated string literal (detected at line 7)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:20:48)
-- CODE: 
Nome=(input("Insira seu nome:"))
Idade=(input("Insira sua idade:"))
Altura=(input("Insira sua altura"))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Insira seu nome:Insira sua idade:Insira sua altura
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Insira seu nome:Insira sua idade:Insira sua altura
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Insira seu nome:Insira sua idade:Insira sua altura
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Insira seu nome:Insira sua idade:Insira sua altura
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:19:30)
-- CODE: 
Nome=(input("Insira seu nome:"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Insira seu nome:
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Insira seu nome:
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Insira seu nome:
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Insira seu nome:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
